fix: layout spacing

--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -126,7 +126,7 @@ a.router-link-active {
                               }
                             }
                             .q-btn-dense.q-btn-round {
-                              margin-right: -15px;
+                              margin-right: -14px;
                               }
                             }
       @media only screen and (max-width: 365px) {
